# nightwatch

./: .env.example  .gitignore  .ralph-launch.sh  404.html  CHANGELOG.md  DEVELOPMENT.md  README.md  index.html  mkdocs.yml  nightwatch.yml.example  noxaudit.yml.example  pyproject.toml  release-please-config.json  sitemap.xml
.github/: dependabot.yml
action/: action.yml
benchmark/: blog-post.md  chunked-pending.json  corpus-phase2.yml  corpus.yml  phase2-consistency.md  scorecard.md
changelog/: index.html
contributing/: index.html
docs/: CNAME  benchmark.md  changelog.md  index.md  meta.json
docs-site/: next.config.mjs  package-lock.json  package.json  source.config.ts
drafts/: blog-outlines.md  v1.1.1.md  v1.1.10-general.md  v1.1.10-technical.md  v1.1.2.md  v1.1.3.md  v1.1.5-general.md  v1.1.5-technical.md  v1.1.6-general.md  v1.1.6-technical.md  v1.1.7-general.md  v1.1.7-technical.md  v1.1.8-general.md  v1.1.8-technical.md  v1.1.9-general.md  v1.1.9-technical.md  v1.2.0-general.md  v1.2.0-technical.md  v1.2.1-general.md  v1.2.1-technical.md  v1.2.2-general.md  v1.2.2-technical.md  v1.2.3-general.md  v1.2.3-technical.md  v1.2.4-general.md  v1.2.4-technical.md
focus_prompts/: dependencies.md  docs.md  hygiene.md  patterns.md  performance.md  security.md  testing.md
nightwatch/: cli.py  config.py  decisions.py  models.py  reporter.py  runner.py
noxaudit/: __init__.py  cli.py  confidence.py  config.py  cost_ledger.py  decisions.py  dedup.py  issues.py  models.py  prepass.py  pricing.py  reporter.py  runner.py  validate.py
products/: noxaudit.yaml
(+122 files in other folders)
